--- a/app/src/main/res/layout/activity_connect1.xml
+++ b/app/src/main/res/layout/activity_connect1.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/lenar_wallpaper"
+        android:src="@drawable/background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
