--- a/app/src/main/res/layout/activity_connect2.xml
+++ b/app/src/main/res/layout/activity_connect2.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/lenar_wallpaper"
+        android:src="@drawable/background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -41,12 +41,11 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/robotolight"
-        android:textSize="12dp"
         android:text="Turn on Smartphone Hotspot\n\nFill in your Hotspot info"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
+        android:textSize="12dp"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -78,7 +77,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/robotolight"
         android:text="Password"
         android:textColor="@color/white"
@@ -99,11 +98,12 @@
         app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <ImageView
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="40dp"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:padding="20dp"
         android:src="@drawable/ic_check"
+        android:onClick="test"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView" />
