--- a/app/src/main/res/anim/rotate.xml
+++ b/app/src/main/res/anim/rotate.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/linear_interpolator"
+    android:interpolator="@android:anim/cycle_interpolator"
     android:repeatCount="infinite"
-    android:duration="4000"
+    android:duration="3000"
     android:pivotX="50%"
-    android:pivotY="50%"
+    android:pivotY="100%"
     android:fromDegrees="0"
-    android:toDegrees="360">
+    android:toDegrees="45">
 </rotate>
