--- a/app/src/main/res/layout/activity_connect1.xml
+++ b/app/src/main/res/layout/activity_connect1.xml
@@ -16,51 +16,73 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="300dp"
-        android:layout_height="400dp"
-        android:background="@drawable/shape_roundsquare"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.1"
+        android:scaleType="centerCrop"
+        android:src="@drawable/lenar_wallpaper"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView5" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/robotolight"
-        android:text="Connecting Device"
+        android:text="Connecting"
         android:textColor="@color/white"
-        android:textSize="25dp"
-        android:layout_marginTop="40dp"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView6" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.3" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/robotolight"
-        android:text="place Lenar near by your smartphone"
-        android:textSize="12dp"
-        android:layout_marginTop="15dp"
+        android:lineSpacingExtra ="10dp"
+        android:text="Turn on Lenar\nPlace it near by your smartphone"
         android:textColor="@color/white"
+        android:gravity="center"
+        android:textSize="12dp"
+        app:layout_constraintVertical_bias="0.6"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loading_circle" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/loading_circle"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/ic_loader"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        android:id="@+id/checksign"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:src="@drawable/ic_check"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView6" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+    <ImageView
+        android:id="@+id/smartphone"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_smartphone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/imageView5" />
+
+    <ImageView
+        android:id="@+id/signal_arc"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_signal"
+        app:layout_constraintBottom_toTopOf="@+id/smartphone"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="@+id/textView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
