--- a/app/src/main/res/layout/fragment_timelapse.xml
+++ b/app/src/main/res/layout/fragment_timelapse.xml
@@ -4,8 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:background="@color/main_theme_color">
+    android:layout_height="match_parent"
+    android:background="#00FFFFFF">
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        app:layout_constraintBottom_toBottomOf="parent">
 
     <ImageView
         android:id="@+id/timelapse_btn2"
@@ -63,6 +69,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/timelapse_btn2"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/timelapse_btn2"/>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
