--- a/app/src/main/res/layout/activity_connect1.xml
+++ b/app/src/main/res/layout/activity_connect1.xml
@@ -20,7 +20,7 @@
         android:layout_height="match_parent"
         android:alpha="0.1"
         android:scaleType="centerCrop"
-        android:src="@drawable/lenar_wallpaper"
+        android:src="@drawable/lenar_wallpaper3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,7 +36,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.3" />
 
     <TextView
         android:id="@+id/textView2"
@@ -48,11 +48,24 @@
         android:textColor="@color/white"
         android:gravity="center"
         android:textSize="12dp"
-        app:layout_constraintVertical_bias="0.9"
+        app:layout_constraintVertical_bias="0.7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/robotolight"
+        android:gravity="center"
+        android:layout_marginBottom="20dp"
+        android:text="Copyright 2021. PINERA inc. all rights reserved."
+        android:textColor="#595858"
+        android:textSize="9dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
     <ImageView
