--- a/app/src/main/res/drawable/shape_roundsquare.xml
+++ b/app/src/main/res/drawable/shape_roundsquare.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="30dp"
+        android:radius="10dp"
         />
 
     <size
@@ -10,6 +10,6 @@
         />
 
     <solid
-        android:color="@color/main_theme_color"
+        android:color="#33000000"
         />
 </shape>
