--- a/app/src/main/res/layout/activity_connect1.xml
+++ b/app/src/main/res/layout/activity_connect1.xml
@@ -10,8 +10,7 @@
         android:id="@+id/imageView5"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/background"
+        android:background="@drawable/background2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,28 +37,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/robotolight"
-        android:lineSpacingExtra ="10dp"
-        android:text="Turn on Lenar\nPlace it near by your smartphone"
-        android:textColor="@color/white"
-        android:gravity="center"
-        android:textSize="12dp"
-        app:layout_constraintVertical_bias="0.7"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:fontFamily="@font/robotolight"
         android:gravity="center"
-        android:layout_marginBottom="20dp"
         android:text="Copyright 2021. PINERA inc. all rights reserved."
         android:textColor="#595858"
         android:textSize="9dp"
@@ -74,17 +59,17 @@
         android:layout_height="45dp"
         android:src="@drawable/ic_check"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/status_text" />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:visibility="gone"
         android:id="@+id/connection_fail_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="reconnect_btn_click"
         app:layout_constraintBottom_toBottomOf="@+id/imageView5"
         app:layout_constraintEnd_toEndOf="@+id/imageView5"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +95,6 @@
             android:background="@drawable/shape_roundsquare"
             android:fontFamily="@font/robotolight"
             android:gravity="center"
-            android:onClick="reconnect_btn_click"
             android:padding="10dp"
             android:text="Reconnect"
             android:textColor="@color/white"
@@ -119,23 +103,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/failsign" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="15dp"
-            android:fontFamily="@font/robotolight"
-            android:gravity="center"
-            android:lineSpacingExtra="10dp"
-            android:text="Connection fail"
-            android:textColor="@color/white"
-            android:textSize="14dp"
-            app:layout_constraintBottom_toTopOf="@+id/failsign"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
