--- a/app/src/main/res/layout/activity_streamingsetting.xml
+++ b/app/src/main/res/layout/activity_streamingsetting.xml
@@ -57,7 +57,7 @@
     <LinearLayout
         android:id="@+id/lsrmenu"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/shape_roundsquare"
@@ -69,15 +69,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="@font/robotolight"
-            android:text="Lenar Streaming Resolution"
+            android:text="Lenar streaming resolution"
             android:textColor="@color/white"
-            android:textSize="10dp" />
+            android:textSize="14dp" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/menu"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/shape_roundsquare"
@@ -89,9 +89,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="@font/robotolight"
-            android:text="Monitoring Resolution"
+            android:text="Monitoring resolution"
             android:textColor="@color/white"
-            android:textSize="10dp" />
+            android:textSize="14dp" />
     </LinearLayout>
 
 
