--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -144,6 +144,20 @@
             android:src="@drawable/ic_mic" />
     </LinearLayout>
 
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="20dp"
+        android:background="@drawable/shape_roundsquare"
+        android:fontFamily="@font/robotolight"
+        android:gravity="center"
+        android:text="240P"
+        android:textColor="@color/white"
+        android:textSize="12dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:visibility="gone"
         android:id="@+id/reconnect_layout"
@@ -179,7 +193,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
