--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,6 +24,6 @@
     <style name="numberPickerCustomSize">
         <item name="android:textSize">10dp</item>
         <item name="android:editTextColor">@color/white</item>
-        <item name="android:fontFamily">@font/robotolight</item>
+        <item name="android:fontFamily">@font/robotobold</item>
     </style>
 </resources>
