--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00FFFFFF">
+    android:background="#F2000000">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -15,70 +15,114 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="80dp"
-            android:layout_height="65dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/livestream_btn"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/shape_roundsquare"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginStart="15dp"
+            android:src="@drawable/ic_live"
+            app:layout_constraintBottom_toBottomOf="@+id/textView8"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.3"
-            android:background="@drawable/shape_roundsquare"
-            android:orientation="vertical"
-            android:weightSum="2"
-            app:layout_constraintTop_toTopOf="@+id/constraintLayout">
+            app:layout_constraintTop_toTopOf="@+id/textView8" />
 
-            <ImageView
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:paddingTop="5dp"
-                android:paddingHorizontal="1dp"
-                android:src="@drawable/ic_camera"/>
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/robotolight"
+            android:layout_marginStart="10dp"
+            android:text="Live stream"
+            android:textColor="@color/white"
+            android:textSize="15dp"
+            app:layout_constraintStart_toEndOf="@+id/imageView8"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:fontFamily="@font/robotolight"
-                android:gravity="center|top"
-                android:text="Live Stream"
-                android:textColor="@color/white"
-                android:textSize="10dp" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="80dp"
-            android:layout_height="65dp"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/robotolight"
+            android:text="Choose Live stream platfrom\nset Details to Live broadcast your video"
+            android:textColor="#5080E1"
+            android:textSize="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/imageView8"
+            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/ic_next"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/quicklive_btn"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginHorizontal="40dp"
+        android:background="@drawable/shape_roundsquare"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/livestream_btn">
+
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginStart="15dp"
+            android:src="@drawable/ic_video"
+            app:layout_constraintBottom_toBottomOf="@+id/textView9"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.7"
-            android:background="@drawable/shape_roundsquare"
-            android:orientation="vertical"
-            android:weightSum="2"
-            app:layout_constraintTop_toTopOf="@+id/constraintLayout">
+            app:layout_constraintTop_toTopOf="@+id/textView9" />
 
-            <ImageView
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:padding="10dp"
-                android:src="@drawable/ic_live"/>
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/robotolight"
+            android:text="Quick live"
+            android:textColor="@color/white"
+            android:textSize="15dp"
+            android:layout_marginStart="10dp"
+            app:layout_constraintStart_toEndOf="@+id/imageView9"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:fontFamily="@font/robotolight"
-                android:gravity="center|top"
-                android:text="Quick Live"
-                android:textColor="@color/white"
-                android:textSize="10dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/robotolight"
+            android:text="Live Stream video with latest setup"
+            android:textColor="#5080E1"
+            android:textSize="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/imageView9"
+            app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/ic_next"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
