--- a/app/src/main/res/layout/fragment_capture.xml
+++ b/app/src/main/res/layout/fragment_capture.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:background="@color/main_theme_color"
+        android:layout_marginBottom="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
