--- a/app/src/main/res/layout/fragment_timelapse.xml
+++ b/app/src/main/res/layout/fragment_timelapse.xml
@@ -11,6 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="130dp"
+        android:layout_marginBottom="40dp"
         android:background="@color/main_theme_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
